--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -290,7 +290,6 @@ main {
 .payment-type-btn-container {
     background: #3b3e71;
     border-radius: 10px;
-    padding: 10px;
     text-align: center;
     font-size: 12px;
     height: 80px;
@@ -308,6 +307,9 @@ main {
 
 .payment-type-btn {
     border: none;
+    margin: 0;
+    background: none;
+    padding: 5px;
     outline: none;
     cursor: pointer;
 }
